Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86134

[Reg 5.9 -> 5.12] QPushButton: icon not aligned when menu-indicator is removed

XMLWordPrintable

    • macOS
    • 37f9f2e7afb2539ead355f1115e10835c2df9f92 (qt/qtbase/dev) 80a02a05794271058aee7962ff86fc1ab2014962 (qt/tqtc-qtbase/tqtc/lts-5.15) a0def9b90dd9eb18692b35df12e5a43ca0e5fa32 (qt/qtbase/6.1) 5a09a21b6011114473a547ef12a4e63c9206de15 (qt/qtbase/6.0)
    • Bug Fixing Candidates

      In Qt5.9, qpushbutton icons were aligned correctly when the menu indicator was removed.
      They no longer are in recent supported versions.
      Please see the attached image: qtbug86134_comparision.png.

      To reproduce this issue,
      run the attached sample project : QtBug86134.zip

        1. patch1_qtbug86134.diff
          0.8 kB
          Nahomi Gröhn
        2. qtbug86134_comparision.png
          88 kB
          Nahomi Gröhn
        3. QtBug86134.zip
          2 kB
          Nahomi Gröhn
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dorisverria Doris Verria
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: