Fix label margins for pulldowns with custom styled menu indicator on macOS

Don't apply the QMacStyle's pulldownButton titlemargins to the
QPushButton's contents rect if the button has a custom styled menu
indicator. This causes the button's text/icon to be misaligned.

Fixes: QTBUG-86134
Change-Id: I6ef95d51071c1d79f1cc07425a46958f50091b7e
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 37f9f2e7afb2539ead355f1115e10835c2df9f92)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>